--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: flashy_tab_bar2
 description: One another nice animated tab bar (Flutter Version) (inspired by https://github.com/Cuberto/flashy-tabbar)
-version: 0.0.6
+version: 0.0.7
 homepage: https://github.com/Bilonik/flashy_tab_bar2
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
